src/objects/API_Log__c/API_Log__c.object-meta.xml
<CustomObject>
    <description>Contains error information of API Call Outs or any other process</description>
    <label>API Log</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>API Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>