src/objects/API_Log__c/fields/Affiliate_Name__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Name__c</fullName>
    <label>Affiliate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>