src/objects/API_Log__c/fields/Affiliate_Token__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Token__c</fullName>
    <label>Affiliate Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>