src/objects/API_Log__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attachment</label>
    <referenceTo>Attachment__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>