src/objects/API_Log__c/fields/Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Report</label>
    <referenceTo>Credit_Report__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>