src/objects/API_Log__c/fields/Creditors__c.field-meta.xml
<CustomField>
    <fullName>Creditors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creditors</label>
    <referenceTo>Creditors__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>