src/objects/API_Log__c/fields/Deals__c.field-meta.xml
<CustomField>
    <fullName>Deals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deals</label>
    <referenceTo>DS__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>