src/objects/API_Log__c/fields/Document_OCR_Request__c.field-meta.xml
<CustomField>
    <fullName>Document_OCR_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document OCR Request</label>
    <referenceTo>Document_OCR_Request__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>