src/objects/API_Log__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <label>Errors</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>