src/objects/API_Log__c/fields/Lead_Std__c.field-meta.xml
<CustomField>
    <fullName>Lead_Std__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leads</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>