src/objects/API_Log__c/fields/Notification_Send_To_2__c.field-meta.xml
<CustomField>
    <fullName>Notification_Send_To_2__c</fullName>
    <label>Notification Send To 2</label>
    <type>Email</type>
</CustomField>