src/objects/API_Log__c/fields/Notification_Send_To__c.field-meta.xml
<CustomField>
    <fullName>Notification_Send_To__c</fullName>
    <label>Notification Send To</label>
    <type>Email</type>
</CustomField>