src/objects/API_Log__c/fields/Remote_Address__c.field-meta.xml
<CustomField>
    <fullName>Remote_Address__c</fullName>
    <label>Remote Address</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>