src/objects/API_Log__c/fields/Request_Duration__c.field-meta.xml
<CustomField>
    <fullName>Request_Duration__c</fullName>
    <label>Request Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>