src/objects/API_Log__c/fields/Request_Headers__c.field-meta.xml
<CustomField>
    <fullName>Request_Headers__c</fullName>
    <label>Request Headers</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>