src/objects/API_Log__c/fields/Request_URI_Short__c.field-meta.xml
<CustomField>
    <fullName>Request_URI_Short__c</fullName>
    <label>Request URI (Short)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>