src/objects/API_Log__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <label>Resolved</label>
    <type>DateTime</type>
</CustomField>