src/objects/API_Log__c/fields/Resource_Path__c.field-meta.xml
<CustomField>
    <fullName>Resource_Path__c</fullName>
    <label>Resource Path</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>