src/objects/API_Log__c/fields/Retry_Processed__c.field-meta.xml
<CustomField>
    <fullName>Retry_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry Processed</label>
    <type>Checkbox</type>
</CustomField>