src/objects/API_Log__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agendize</fullName>
            </value>
            <value>
                <fullName>GCS</fullName>
            </value>
            <value>
                <fullName>Lead Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>