src/objects/API_Log__c/listViews/All_API_Logs.listView-meta.xml
<ListView>
    <fullName>All_API_Logs</fullName>
    <columns>NAME</columns>
    <columns>Tag__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Request_URI__c</columns>
    <columns>Has_Errors__c</columns>
    <columns>Request_Time__c</columns>
    <columns>Send_Notification__c</columns>
    <columns>CreatedTime__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:5</value>
    </filters>
    <label>All API Logs</label>
</ListView>