src/objects/API_Log__c/listViews/All_TODAY.listView-meta.xml
<ListView>
    <fullName>All_TODAY</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Request_URI__c</columns>
    <columns>Has_Errors__c</columns>
    <columns>Request_Time__c</columns>
    <columns>Send_Notification__c</columns>
    <columns>CreatedTime__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All TODAY</label>
</ListView>