src/objects/API_Log__c/listViews/apply_ndr_com.listView-meta.xml
<ListView>
    <fullName>apply_ndr_com</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Request_URI__c</columns>
    <columns>Has_Errors__c</columns>
    <columns>Request_Time__c</columns>
    <columns>Send_Notification__c</columns>
    <columns>CreatedTime__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tag__c</field>
        <operation>equals</operation>
        <value>apply.ndr.com</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>apply.ndr.com</label>
</ListView>