src/objects/API_Log__c/listViews/DraftsGet.listView-meta.xml
<ListView>
    <fullName>DraftsGet</fullName>
    <columns>NAME</columns>
    <columns>Tag__c</columns>
    <columns>Payment_Schedule__c</columns>
    <columns>Request_Duration__c</columns>
    <columns>Callout_Time__c</columns>
    <columns>Records_Processed__c</columns>
    <columns>Has_Errors__c</columns>
    <columns>Request_Time__c</columns>
    <columns>Send_Notification__c</columns>
    <columns>CreatedTime__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tag__c</field>
        <operation>equals</operation>
        <value>DraftsGetXML</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:10</value>
    </filters>
    <label>DraftsGet</label>
</ListView>