src/objects/API_Log__c/listViews/GCS.listView-meta.xml
<ListView>
    <fullName>GCS</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Request_URI__c</columns>
    <columns>Has_Errors__c</columns>
    <columns>Request_Time__c</columns>
    <columns>Send_Notification__c</columns>
    <columns>CreatedTime__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:3</value>
    </filters>
    <filters>
        <field>Class_Name__c</field>
        <operation>contains</operation>
        <value>GCS</value>
    </filters>
    <label>GCS</label>
</ListView>