src/objects/API_Log__c/listViews/inpro_Inbound_Leads.listView-meta.xml
<ListView>
    <fullName>inpro_Inbound_Leads</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Request_URI__c</columns>
    <columns>Has_Errors__c</columns>
    <columns>Request_Time__c</columns>
    <columns>Send_Notification__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Request_Duration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Name__c</field>
        <operation>equals</operation>
        <value>LeadImportREST</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>Affiliate_Name__c</field>
        <operation>startsWith</operation>
        <value>inpro</value>
    </filters>
    <label>inpro Inbound Leads</label>
</ListView>