src/objects/API_Log__c/listViews/Lead_Endpoint.listView-meta.xml
<ListView>
    <fullName>Lead_Endpoint</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Affiliate_Name__c</columns>
    <columns>Request_URI__c</columns>
    <columns>Has_Errors__c</columns>
    <columns>Request_Time__c</columns>
    <columns>Send_Notification__c</columns>
    <columns>CreatedTime__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:5</value>
    </filters>
    <filters>
        <field>Class_Name__c</field>
        <operation>equals</operation>
        <value>LeadImportREST</value>
    </filters>
    <label>Lead Endpoint</label>
</ListView>