src/objects/API_Log__c/listViews/Lead_Tracking_Page_Views.listView-meta.xml
<ListView>
    <fullName>Lead_Tracking_Page_Views</fullName>
    <columns>NAME</columns>
    <columns>Tag__c</columns>
    <columns>Action__c</columns>
    <columns>Has_Errors__c</columns>
    <columns>Errors__c</columns>
    <columns>Request_Time__c</columns>
    <columns>Send_Notification__c</columns>
    <columns>CreatedTime__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tag__c</field>
        <operation>equals</operation>
        <value>Lead Tracking</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:10</value>
    </filters>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Page View</value>
    </filters>
    <label>Lead Tracking Page Views</label>
</ListView>